samples/_failures_safe/1761188884_aea93b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e677e701.c: In function ‘main’:
./samples/SAFE/__tmp_e677e701.c:140:5: error: expected declaration or statement at end of input
  140 |     add_edge(&g, 5, 2, 2);
      |     ^~~~~~~~
